--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "voice app",
   "main": "index.js",
   "authors": [
-    "Victor <hanweihw@gmail.com>"
+    "Yipeng <tccyp86@gmail.com>"
   ],
   "license": "MIT",
   "homepage": "https://github.com/tccyp001/voice",
